--- a/DownloadSrfVideos.Core/DownloadSrfVideos.Core.csproj
+++ b/DownloadSrfVideos.Core/DownloadSrfVideos.Core.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
