--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,7 @@ name: .NET
 
 on:
   push:
-    branches: [ "main" , "feature/*"]
+    branches: [ "main" , "feature/**"]
   pull_request:
     branches: [ "main" ]
 
