--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,8 +10,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-and-unit:
+    name: Unit tests
     runs-on: ubuntu-latest
 
     steps:
@@ -26,5 +26,22 @@ jobs:
       run: dotnet build --no-restore
     - name: Run unit tests
       run: dotnet test --no-build --verbosity normal --filter="TestCategory!=Integration"
+
+  build-and-integration:
+    name: Integration tests
+    runs-on: ubuntu-latest
+    
+    needs: build-and-unit
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build project
+      run: dotnet build --no-restore
     - name: Run integration tests
       run: dotnet test --no-build --verbosity normal --filter="TestCategory=Integration"
