feature, test: added video composing functionality and tests

--- a/DownloadSrfVideos.Core.Tests/DownloadSrfVideos.Core.Tests.csproj
+++ b/DownloadSrfVideos.Core.Tests/DownloadSrfVideos.Core.Tests.csproj
@@ -22,4 +22,23 @@
       <ProjectReference Include="..\DownloadSrfVideos.Core\DownloadSrfVideos.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Resources" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Resources\segment000.mp4">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\segment001.mp4">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\segment002.mp4">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\segment003.mp4">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
