ci: updated ci script to install ffmpeg for integration tests

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,6 +39,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Setup FFMPEG
+      run: apt install ffmpeg
     - name: Restore dependencies
       run: dotnet restore
     - name: Build project
