--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Setup FFMPEG
-      run: apt install ffmpeg
+      run: sudo apt install ffmpeg
     - name: Restore dependencies
       run: dotnet restore
     - name: Build project
